--- a/css/style.css
+++ b/css/style.css
@@ -47,13 +47,13 @@ body {
 }
 
 .team-name {
-    height: 60px;
     font-family: 'Post No Bills Jaffna';
     font-style: normal;
     font-weight: bold;
     font-size: 40px;
     line-height: 60px;
-    margin-left: 0;
+    color: #FFFFFF;
+    flex-wrap: nowrap;
 }
 
 .social-links {
